--- a/desratizacion.html
+++ b/desratizacion.html
@@ -17,7 +17,7 @@
         <div class="banner-content banner-content-sec banner-content-desra  "></div>
         <h1>Desratizacion</h1>
         <div id="division"></div>
-        <img src="/limpieza/assets/img/Pulverizacion.png" alt="" />
+        <img src="assets/img/fumigacion.png" alt="" />
     </header>
 
     <div id="topbar">
@@ -28,8 +28,8 @@
         <a href="index.html"><img src="assets/img/logo-1.png" id="logo-responsive" alt="" /></a>
         <nav id="menu">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html#nosotros">Nosotros</a></li>
                 <li class="submenu">
                     <a href="#">Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
                     <ul>
@@ -41,7 +41,7 @@
                         <li><a href="termonbulizacion.html">Termonebulización</a></li>
                     </ul>
                 </li>
-                <li><a href="#contactanos">Contáctanos</a></li>
+                <li><a href="index.html#contactanos">Contáctanos</a></li>
             </ul>
             <div class="clearfix"></div>
         </nav>
@@ -52,7 +52,10 @@
         <h2 id="first-h2">¿En que consiste la Desratización</h2>
         <p>
             Desratización o Control de Roedores. Consiste en la exterminación de estos animales extremadamente
-            prolíficos, utilizando cebos tóxicos, o bien trampas de capturas, lo que variará dependiendo del tipo de roedor, hábitat y exigencias normativas. Los roedores comprenden alrededor de la tercera parte de todas las especies de mamíferos existentes, e incluyen varias de las plagas más graves para el hombre. Su rasgo anatómico más característico es la dentadura.
+            prolíficos, utilizando cebos tóxicos, o bien trampas de capturas, lo que variará dependiendo del tipo de
+            roedor, hábitat y exigencias normativas. Los roedores comprenden alrededor de la tercera parte de todas las
+            especies de mamíferos existentes, e incluyen varias de las plagas más graves para el hombre. Su rasgo
+            anatómico más característico es la dentadura.
 
 
 
@@ -65,7 +68,7 @@
             y riesgos. Antes de realizar un tratamiento se elige el cebo más adecuado, la alternancia de productos y la
             correcta colocación de cebos para una máxima eficacia.
         </p>
-        <div class="caja-img caja-img-desra"><img src="/limpieza/assets/img/desratizacion.jpg" alt=""></div>
+        <div class="caja-img caja-img-desra"><img src="assets/img/desratizacion.jpg" alt=""></div>
     </div>
 
     <footer>
