--- a/fumigacion.html
+++ b/fumigacion.html
@@ -14,10 +14,10 @@
 
 <body>
     <header class="banner-sec ">
-        <div class="banner-content banner-content-sec  "></div> 
+        <div class="banner-content banner-content-sec  "></div>
         <h1>Fumigacion</h1>
         <div id="division"></div>
-        <img src="/limpieza/assets/img/fumigacion.png" alt="" />
+        <img src="assets/img/fumigacion.png" alt="" />
     </header>
 
     <div id="topbar">
@@ -27,8 +27,8 @@
         <a href="index.html"><img src="assets/img/logo-1.png" id="logo-responsive" alt="" /></a>
         <nav id="menu">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html#nosotros">Nosotros</a></li>
                 <li class="submenu">
                     <a href="#">Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
                     <ul>
@@ -41,7 +41,7 @@
                     </ul>
 
                 </li>
-                <li><a href="#contactanos">Contáctanos</a></li>
+                <li><a href="index.html#contactanos">Contáctanos</a></li>
             </ul>
             <div class="clearfix"></div>
         </nav>
@@ -65,7 +65,7 @@
         <p>Todo este servicio lo puede obtener usted a un muy buen precio y con un personal altamente calificado y
             con vasta experiencia </p>
         </p>
-        <div class="caja-img"><img src="/limpieza/assets/img/fumigacion-1.jpg" alt=""></div>
+        <div class="caja-img"><img src="assets/img/fumigacion-1.jpg" alt=""></div>
     </div>
 
     <footer>
