--- a/pulverizacion.html
+++ b/pulverizacion.html
@@ -12,12 +12,12 @@
     <title>Document</title>
 </head>
 
-<body >
+<body>
     <header class="banner-sec ">
         <div class="banner-content banner-content-sec banner-content-pulve  "></div>
         <h1>Pulverizacion</h1>
         <div id="division"></div>
-        <img src="/limpieza/assets/img/fumigacion.png" alt="" />
+        <img src="assets/img/Pulverizacion.png" alt="" />
     </header>
 
     <div id="topbar">
@@ -28,10 +28,10 @@
         <a href="index.html"><img src="assets/img/logo-1.png" id="logo-responsive" alt="" /></a>
         <nav id="menu">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html#nosotros">Nosotros</a></li>
                 <li class="submenu">
-                    <a href="#" >Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
+                    <a href="#">Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
                     <ul>
                         <li><a href="fumigacion.html">Fumigación</a></li>
                         <li><a href="desinfeccion.html">Desinfección</a></li>
@@ -41,7 +41,7 @@
                         <li><a href="termonbulizacion.html">Termonebulización</a></li>
                     </ul>
                 </li>
-                <li><a href="#contactanos">Contáctanos</a></li>
+                <li><a href="index.html#contactanos">Contáctanos</a></li>
             </ul>
             <div class="clearfix"></div>
         </nav>
@@ -51,16 +51,25 @@
         <h4>Definición</h4>
         <h2 id="first-h2">¿En que consiste la Pulverización?</h2>
         <p>
-            Es un método de desinfección muy eficaz para acabar con virus y demás agentes patógenos con el objetivo de tener espacios limpios, sanos y seguros. Este tipo de desinfección se recomienda para diferentes áreas como pueden ser: Espacios dedicados al uso sanitario, Vestuarios y baños, Locales comerciales, Automóviles profesionales y particulares, Parkings, Espacios de oficina y congresos, Restaurantes y áreas de preparación de alimentos, Instalaciones educativas y deportivas, Todo tipo de transporte público y Espacios públicos con mucha afluencia.
+            Es un método de desinfección muy eficaz para acabar con virus y demás agentes patógenos con el objetivo de
+            tener espacios limpios, sanos y seguros. Este tipo de desinfección se recomienda para diferentes áreas como
+            pueden ser: Espacios dedicados al uso sanitario, Vestuarios y baños, Locales comerciales, Automóviles
+            profesionales y particulares, Parkings, Espacios de oficina y congresos, Restaurantes y áreas de preparación
+            de alimentos, Instalaciones educativas y deportivas, Todo tipo de transporte público y Espacios públicos con
+            mucha afluencia.
 
         </p>
         <h4>Servicio</h4>
         <h2 id="last-h2">Nuestro Servicio</h2>
         <p>
-            Gracias a nuestro conocimiento, se ha elegido un desinfectante que, combinado con el método de pulverización, nos permite tratar áreas en muy cortos períodos de tiempo, y sin afectar la actividad de la empresa y con la máxima efectividad.
-            <p>Exterminio del Norte realizará certificados de desinfección cada vez que finalice el servicio de pulverización frente a virus, indicando la zona tratada, el producto utilizado y la fecha de realización.</p>
+            Gracias a nuestro conocimiento, se ha elegido un desinfectante que, combinado con el método de
+            pulverización, nos permite tratar áreas en muy cortos períodos de tiempo, y sin afectar la actividad de la
+            empresa y con la máxima efectividad.
+        <p>Exterminio del Norte realizará certificados de desinfección cada vez que finalice el servicio de
+            pulverización frente a virus, indicando la zona tratada, el producto utilizado y la fecha de realización.
         </p>
-        <div class="caja-img caja-img-pulve "><img src="/limpieza/assets/img/pulverizacion.jpg" alt=""></div>
+        </p>
+        <div class="caja-img caja-img-pulve "><img src="assets/img/pulverizacion.jpg" alt=""></div>
     </div>
 
     <footer>
