--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <a href="index.html"><img src="assets/img/logo-1.png" id="logo-responsive" alt="" /></a>
             <nav id="menu">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li class="submenu">
-                        <a href="#" >Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
+                        <a href="#">Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
                         <ul>
                             <li><a href="fumigacion.html">Fumigación</a></li>
                             <li><a href="desinfeccion.html">Desinfección</a></li>
@@ -100,7 +100,7 @@
                     </p>
                 </div>
                 <div class="button-b">
-                    <a href="desinfectacion.html">Ver mas</a>
+                    <a href="desinfeccion.html">Ver mas</a>
                 </div>
             </div>
             <div class="div-a">
@@ -138,7 +138,8 @@
                 <h6>Tratamientos en:</h6>
                 <h2>Desinsectación</h2>
                 <p class="div-a-p">
-                    La desinsectación, es la acción de eliminar determinados artrópodos dañinos - principalmente insectos
+                    La desinsectación, es la acción de eliminar determinados artrópodos dañinos - principalmente
+                    insectos
                     - por medios químicos, físicos o con la aplicación de medidas de saneamiento básico...
                 </p>
                 <div class="button">
@@ -207,8 +208,8 @@
         <footer>
             <p>Copyright &copy; Exterminio del Norte</p>
         </footer>
-        </div>
-    </body>
-    <script src="scripts.js"></script>
+    </div>
+</body>
+<script src="scripts.js"></script>
 
 </html>
