Modificacion de fotos

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <input type="checkbox" id="btn-menu">
             <label for="btn-menu"><i class="fas fa-bars"></i></label>
             <div id="img-logo"></div>
-            <a href="index.html"><img src="assets/img/logo.png" id="logo-1" alt="" /></a>
-            <a href="index.html"><img src="assets/img/logo-1.png" id="logo-responsive" alt="" /></a>
+            <a href="index.html"><img src="assets/img/icono1.png" id="logo-1" alt="" /></a>
+            <a href="index.html"><img src="assets/img/iconoSolo.png" id="logo-responsive" alt="" /></a>
             <nav id="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
