Actualizando fotos de prueba

--- a/desinfeccion.html
+++ b/desinfeccion.html
@@ -12,12 +12,12 @@
     <title>Document</title>
 </head>
 
-<body>
+<body >
     <header class="banner-sec  banner-sec-desi">
         <div class="banner-content banner-content-sec banner-content-sec-desi "></div>
         <h1>Desinfectacion</h1>
         <div id="division"></div>
-        <img src="assets/img/Desinfectacion.png" alt="" />
+        <img src="/limpieza/assets/img/Desinfectacion.png" alt="" />
     </header>
 
     <div id="topbar">
@@ -29,9 +29,9 @@
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="index.html#nosotros">Nosotros</a></li>
+                <li><a href="#">Nosotros</a></li>
                 <li class="submenu">
-                    <a href="#">Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
+                    <a href="#" >Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
                     <ul>
                         <li><a href="fumigacion.html">Fumigación</a></li>
                         <li><a href="desinfeccion.html">Desinfección</a></li>
@@ -41,7 +41,7 @@
                         <li><a href="termonbulizacion.html">Termonebulización</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#contactanos">Contáctanos</a></li>
+                <li><a href="#contactanos">Contáctanos</a></li>
             </ul>
             <div class="clearfix"></div>
         </nav>
@@ -51,20 +51,15 @@
         <h4>Definición</h4>
         <h2 id="first-h2">¿En que consiste la Desinfección?</h2>
         <p>
-            Proceso químico que mata o erradica los microorganismos sin discriminación (Tales como agentes patógenos) al
-            igual como las bacterias, virus y protozoos impidiendo el crecimiento de microorganismos patógenos en fase
-            vegetativa que se encuentren en objetos inertes.
+            Proceso químico que mata o erradica los microorganismos sin discriminación (Tales como agentes patógenos) al igual como las bacterias, virus y protozoos impidiendo el crecimiento de microorganismos patógenos en fase vegetativa que se encuentren en objetos inertes.
 
         </p>
         <h4>Servicio</h4>
         <h2 id="last-h2">Nuestro Servicio</h2>
         <p>
-            Desinfectar significa reducir la cantidad de gérmenes a un nivel seguro. Lo que se considera un nivel seguro
-            depende de los estándares o requisitos de salud pública en un lugar de trabajo o escuela, entre otros. Por
-            ejemplo, existen procedimientos de desinfección para restaurantes y otras instalaciones que preparan
-            alimentos. Lo que realizaremos variará, según sus necesidades.
+            Desinfectar significa reducir la cantidad de gérmenes a un nivel seguro. Lo que se considera un nivel seguro depende de los estándares o requisitos de salud pública en un lugar de trabajo o escuela, entre otros. Por ejemplo, existen procedimientos de desinfección para restaurantes y otras instalaciones que preparan alimentos. Lo que realizaremos variará, según sus necesidades.
         </p>
-        <div class="caja-img caja-img-desi"><img src="assets/img/Desinfectacion-1.jpeg" alt=""></div>
+        <div class="caja-img caja-img-desi"><img src="/limpieza/assets/img/Desinfectacion-1.jpeg" alt=""></div>
     </div>
 
     <footer>
