--- a/desinsectacion.html
+++ b/desinsectacion.html
@@ -12,12 +12,12 @@
     <title>Document</title>
 </head>
 
-<body>
+<body >
     <header class="banner-sec banner-desis">
         <div class="banner-content banner-content-sec banner-content-desis "></div>
         <h1>Desinsectación</h1>
         <div id="division"></div>
-        <img src="assets/img/Desinfectacion.png" alt="" />
+        <img src="/limpieza/assets/img/Pulverizacion.png" alt="" />
     </header>
 
     <div id="topbar">
@@ -28,10 +28,10 @@
         <a href="index.html"><img src="assets/img/logo-1.png" id="logo-responsive" alt="" /></a>
         <nav id="menu">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="index.html#nosotros">Nosotros</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Nosotros</a></li>
                 <li class="submenu">
-                    <a href="#">Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
+                    <a href="#" >Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
                     <ul>
                         <li><a href="fumigacion.html">Fumigación</a></li>
                         <li><a href="desinfeccion.html">Desinfección</a></li>
@@ -41,7 +41,7 @@
                         <li><a href="termonbulizacion.html">Termonebulización</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#contactanos">Contáctanos</a></li>
+                <li><a href="#contactanos">Contáctanos</a></li>
             </ul>
             <div class="clearfix"></div>
         </nav>
@@ -51,22 +51,15 @@
         <h4>Definición</h4>
         <h2 id="first-h2">¿En que consiste la Desinsectación</h2>
         <p>
-            Nuestro programa de desinsectación consiste en realizar un tratamiento integral al recinto y dependencias
-            involucradas, esto significa, implementar medidas preventivas, de erradicación y control. La idea
-            fundamental es intervenir de manera apreciable en el ciclo de la plaga.
+            Nuestro programa de desinsectación consiste en realizar un tratamiento integral al recinto y dependencias involucradas, esto significa, implementar medidas preventivas, de erradicación y control. La idea fundamental es intervenir de manera apreciable en el ciclo de la plaga.
         </p>
         <h4>Servicio</h4>
         <h2 id="last-h2">Nuestro Servicio</h2>
         <p>
-            Para un efectivo control de plagas como insectos y bichos se debe realizar una inspección previa de los
-            recintos afectados a objeto de definir el o los productos (insecticidas) a utilizar para desinsectar y
-            fumigar.
-        <p> Es vital realizar un saneamiento del entorno, a objeto de evitar reacciones químicas adversas, que puedan
-            atentar contra la eficiencia de los productos para fumigar que se utilizaran dentro del tratamiento curativo
-            del problema, garantizando, además, la acción residual, que actuara de manera posterior a las
-            desinsectaciones.</p>
+            Para un efectivo control de plagas como insectos y bichos se debe realizar una inspección previa de los recintos afectados a objeto de definir el o los productos (insecticidas) a utilizar para desinsectar y fumigar.
+           <p> Es vital realizar un saneamiento del entorno, a objeto de evitar reacciones químicas adversas, que puedan atentar contra la eficiencia de los productos para fumigar que se utilizaran dentro del tratamiento curativo del problema, garantizando, además, la acción residual, que actuara de manera posterior a las desinsectaciones.</p>
         </p>
-        <div class="caja-img caja-img-desis"><img src="assets/img/desistectacion.jpg" alt=""></div>
+        <div class="caja-img caja-img-desis"><img src="/limpieza/assets/img/desistectacion.jpg" alt=""></div>
     </div>
 
     <footer>
