--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ExterminioDelNorte</title>
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet" />
@@ -22,11 +22,11 @@
             <input type="checkbox" id="btn-menu">
             <label for="btn-menu"><i class="fas fa-bars"></i></label>
             <div id="img-logo"></div>
-            <a href="index.html"><img src="assets/img/icono1.png" id="logo-1" alt="" /></a>
-            <a href="index.html"><img src="assets/img/iconoSolo.png" id="logo-responsive" alt="" /></a>
+            <a href="index.html"><img src="assets/img/logo.png" id="logo-1" alt="" /></a>
+            <a href="index.html"><img src="assets/img/logo-1.png" id="logo-responsive" alt="" /></a>
             <nav id="menu">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="#">Inicio</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li class="submenu">
                         <a href="#">Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
@@ -100,7 +100,7 @@
                     </p>
                 </div>
                 <div class="button-b">
-                    <a href="desinfeccion.html">Ver mas</a>
+                    <a href="desinfectacion.html">Ver mas</a>
                 </div>
             </div>
             <div class="div-a">
