--- a/termonbulizacion.html
+++ b/termonbulizacion.html
@@ -12,12 +12,12 @@
     <title>Document</title>
 </head>
 
-<body>
+<body >
     <header class="banner-sec banner-termo">
         <div class="banner-content"></div>
         <h1>Termonebulizacion</h1>
         <div id="division"></div>
-        <img src="assets/img/fumigacion.png" alt="" />
+        <img src="/limpieza/assets/img/Pulverizacion.png" alt="" />
     </header>
 
     <div id="topbar">
@@ -27,8 +27,8 @@
         <a href="index.html"><img src="assets/img/logo-1.png" id="logo-responsive" alt="" /></a>
         <nav id="menu">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="index.html#nosotros">Nosotros</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Nosotros</a></li>
                 <li class="submenu">
                     <a href="#">Servicios <i class="fas fa-chevron-down" id="menu-arrow"></i></a>
                     <ul>
@@ -41,7 +41,7 @@
                     </ul>
 
                 </li>
-                <li><a href="index.html#contactanos">Contáctanos</a></li>
+                <li><a href="#contactanos">Contáctanos</a></li>
             </ul>
             <div class="clearfix"></div>
         </nav>
@@ -51,20 +51,15 @@
         <h4>Definición</h4>
         <h2 id="first-h2">¿En que consiste la Termonebulización</h2>
         <p>
-            La termonebulización es usada para el control de microorganismos (virus, bacterias, hongos, esporas) donde
-            las sustancias activas deban ser distribuidas uniformemente incluso en sitios inaccesibles, esta se aplica
-            directamente en las áreas de interés, por sus características de penetración
-
+            La termonebulización es usada para el control de microorganismos (virus, bacterias, hongos, esporas) donde las sustancias activas deban ser distribuidas uniformemente incluso en sitios inaccesibles, esta se aplica directamente en las áreas de interés, por sus características de penetración
+  
         </p>
         <h4>Servicio</h4>
         <h2 id="last-h2">Nuestro Servicio</h2>
         <p>
-            Esta técnica, convierte el producto desinfectante líquido en finas gotas de aerosol que condensan al entrar
-            en contacto con el aire exterior creando una niebla visible, de esta forma removemos los patógenos de manera
-            rápida y segura dando a las empresas y organizaciones en general tranquilidad y un lugar seguro para que los
-            colaboradores y clientes puedan volver.
+            Esta técnica, convierte el producto desinfectante líquido en finas gotas de aerosol que condensan al entrar en contacto con el aire exterior creando una niebla visible, de esta forma removemos los patógenos de manera rápida y segura dando a las empresas y organizaciones en general tranquilidad y un lugar seguro para que los colaboradores y clientes puedan volver.
         </p>
-        <div class="caja-img caja-img-termo"><img src="assets/img/termonebulizacion.jpg" alt=""></div>
+        <div class="caja-img caja-img-termo"><img src="/limpieza/assets/img/termonebulizacion.jpg" alt=""></div>
     </div>
 
     <footer>
